--- a/templates/users/login.html
+++ b/templates/users/login.html
@@ -10,8 +10,9 @@ Log In
 
 
 {% block content %}
-
-    Hello!
-
-
+    <form method="POST" action="{% url "users:login" %">
+        {% csrf_token %}
+        {{form.as_p}}
+        <button>Login</button>
+    </form>
 {% endblock content %}
